--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,7 @@ body {
   font-size: 80px;
   height: 210px;
   margin: 0 auto;
-  padding: 35px 0;
+  padding: 35px 20px;
   position: relative;
   text-align: center;
   width: 220px;
@@ -52,7 +52,9 @@ body {
 #milliseconds {
   font-size: 36px;
   position: absolute;
-  top: 20px;
+  margin-top: 40px;
+  margin-right: -130px;
+  letter-spacing: -5px;
 }
 
 .leash {
@@ -86,8 +88,9 @@ body {
   width: 20px;
 }
 
-.number {
+.number, .timer-colon {
   width:40px;
+  margin-top: -50px;
 }
 
 .btn {
